Fixed bg image on smaller screen

--- a/css/queries.css
+++ b/css/queries.css
@@ -7,7 +7,6 @@
   /* Title */
   .hero-text-box {
     right: 20px;
-    background-color: #fff;
   }
 
   /* Project */
@@ -127,11 +126,10 @@
 
   /* Title */
   .hero-text-box {
-    bottom: 25px;
+    bottom: 50px;
     right: 25px;
     width: 250px;
     height: 100px;
-    background-color: #fff;
   }
 
   /* About */
